# 2022-RAL-SOFA-soft-growing-robots

./: LICENSE  README.md
SofaMAMMOBOT/: CMakeLists.txt  README.md  SOFAEversionConfig.cmake.in
SofaMAMMOBOT/cmake/: environment.cmake
SofaMAMMOBOT/examples/: CatheterAlone.py  CylinderObstacle.py  FullSystem.py  SheathAlone.py
SofaMAMMOBOT/python3/src/SofaMAMMOBOT/: sceneGenerate.py
SofaMAMMOBOT/python3/src/SofaMAMMOBOT/controllers/: catheter_controller.py  full_controller.py  navigation_controller.py  sheath_controller.py
SofaMAMMOBOT/python3/src/SofaMAMMOBOT/nodes/: catheter.py  cylinder.py  mamary_duct.py  sheath.py
SofaMAMMOBOT/python3/src/SofaMAMMOBOT/nodes/meshes/Mammary duct/: Breast_Lobules_x0.85.stl  Breast_Lobules_x1.15.stl  Breast_Lobules_x1.stl
SofaMAMMOBOT/src/SOFAEversion/: config.h  initSofaMAMMOBOT.cpp
